--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "start": "nodemon ./server/server.js",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcrypt": "^3.0.3",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
+    "mongoose": "^5.4.6",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.9",
     "vue": "^2.5.21",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
